Navigate to staking after completion if entered from staking

--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -644,7 +644,7 @@
   "components.governance.operations": "Operations",
   "components.governance.enterADrepIDAndPassword": "Enter a Drep ID and password to sign this transaction",
   "components.governance.drepID": "Drep ID",
-  "components.governance.thankYouForParticipating": "Thank you for participating in Governance",
+  "components.governance.thankYouForParticipating": "Thank you for participating in the Cardano Governance",
   "components.governance.thisTransactionCanTakeAWhile": "This transaction can take a while!",
   "components.governance.participationBenefits": "Participating in the Cardano Governance gives you the opportunity to participate in the voting as well as withdraw your staking rewards",
   "components.governance.goToGovernance": "Go to Governance",
@@ -670,6 +670,8 @@
   "components.governance.txFees": "Transaction fee",
   "components.governance.registerStakingKey": "Register staking key",
   "components.governance.enterDrepIDInfo": "Identify your preferred DRep and enter their ID below to delegate your vote",
+  "components.governance.goToStaking": "Go to staking",
+  "components.governance.readyToCollectRewards": "You are now ready to collect your rewards",
   "crypto.errors.rewardAddressEmpty": "Reward address is empty.",
   "crypto.keystore.approveTransaction": "Authorize with your biometrics",
   "crypto.keystore.cancelButton": "Cancel",
